<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/orderItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:hint="Name"
        android:maxLines="1" />

    <EditText
        android:id="@+id/orderItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderItemName"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />


    <EditText
        android:id="@+id/orderItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderItemDescription"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:hint="Quantity"
        android:inputType="textMultiLine|number"
        android:maxLines="10"
        android:scrollHorizontally="false" />

    <EditText
        android:id="@+id/orderItemUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderItemQuantity"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:hint="Unit"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveOrderItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_navigation_check_24"/>

</RelativeLayout>
